# StopWatch

./: .gitignore  .gitmodules  sdkconfig.defaults
.github/workflows/: pages.yml
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/apps/: apps.h
main/apps/app_fft/view/: view.cpp  view.h
main/apps/app_ratchet/: app_ratchet.cpp  app_ratchet.h
main/apps/app_ratchet/view/: view.cpp  view.h
main/apps/app_schulte/: app_schulte.cpp  app_schulte.h
main/apps/app_schulte/view/: view.cpp  view.h
main/apps/app_setup/: app_setup.cpp
main/apps/app_setup/workers/: device.cpp  workers.h
main/apps/app_usb_mic/: app_usb_mic.cpp  app_usb_mic.h
main/apps/common/status_bar/: status_bar.cpp
main/assets/: assets.h
main/assets/images/: icon_ratchet.c  icon_schulte.c  icon_usb_mic.c
main/hal/: hal.cpp  hal.h  hal_audio.cpp  hal_badge.cpp  hal_display.cpp  hal_network.cpp
main/hal/utils/config_ap/: config_ap.cpp
scripts/: build-pages.sh
site/: index.html
tmp/ratchet_audio_candidates/: index.html
tmp/schulte_circle_html/: index.html
